2006-10-24  Paul J Stevens <paul@nfg.nl>

	* modules/dbpgsql.c:
	remove unused vars
	* debian/changelog, debian/control, debian/dbmail.dirs, 
	  debian/dbmail.install, debian/dbmail.postinst, debian/dbmail.postrm, 
	  debian/libdbmail0.dirs, debian/libdbmail0.install, 
	  debian/libdbmail0.postinst, debian/libdbmail0.postrm, 
	  debian/manpages, debian/rules:
	remove the libdbmail package
	* Makefile.am, authmodule.c, dbmodule.c, modules/Makefile.am, sortmodule.c:
	install libdbmail in PREFIX/lib/dbmail and dont scan  PREFIX/lib for
	modules
	* debian/dbmail.install:
	cleanups

2006-10-23  Aaron Stone  <aaron@serendipity.cx>

	* pipe.c:
	Limit the alert rate to one-per-day, other cleanups.

2006-10-23  Paul J Stevens <paul@nfg.nl>

	* dbmail-imapsession.c, imapcommands.c:
	always update recent flags on mailbox close
	* check_dbmail_db.c, dbmail-message.c, dbmodule.c, modules/dbmysql.c, 
	  modules/dbpgsql.c, modules/dbsqlite.c:
	cleanups in the db layer

2006-10-22  Aaron Stone  <aaron@serendipity.cx>

	* serverchild.c, pool.c, server.c:
	To prevent leaking shared memory segments, scoreboard_delete is
	registered with atexit and an isGrantChildProcess variables is used to
	allow only the middle process to delete the shared memory segments.
	* pipe.c:
	Changed many debug calls from trace to TRACE.
	New messages are generated using dbmail_message_construct.
	* dbmail-message.c, check_dbmail_message.c:
	Changed order of sender, recipient arguments to recipient, sender in
	dbmail_message_construct.
	* modules/sortsieve.c:
	First pass at giving the user an alert that when Sieve scripts fail.

2006-10-21  Paul J Stevens <paul@nfg.nl>

	* dbmail-imapsession.c, dbmail-imapsession.h, dbmail-mailbox.c, imap4.c, 
	  imap4.h, imapcommands.c, imapcommands.h:
	added unselect capability to imap

2006-10-20  Aaron Stone  <aaron@serendipity.cx>

	* db.h, dbmail.h.in:
	Moved three constants from db.h to dbmail.h.in.
	* db.c, misc.c, dbmailtypes.h: