@@ -1,3 +1,9 @@
+2006-10-24  Aaron Stone  <aaron@serendipity.cx>
+
+	* serverchild.c:
+	Do an fcntl dance to make sockets non-blocking around accept, lest we
+	block forever if a socket dies just between select and accept.
+
 2006-10-24  Paul J Stevens <paul@nfg.nl>
 
 	* modules/dbpgsql.c:
